--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -16,9 +16,10 @@ const isActive = href === pathname || href === '/' + (subpath?.[0] || '');
 	a {
 		display: inline-block;
 		text-decoration: none;
+		font-size: 1rem;
+		font-weight: 600;
 	}
 	a.active {
-		font-weight: bolder;
 		text-decoration: underline;
 	}
 </style>
