--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -27,7 +27,6 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 				display: block;
 				margin: 0 auto;
 				border-radius: 12px;
-				box-shadow: var(--box-shadow);
 			}
 			.prose {
 				width: 720px;
@@ -60,11 +59,11 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 		<main>
 			<article>
 				<div class="hero-image">
-					{heroImage && <Image width={1020} height={510} src={heroImage} alt="" />}
+					{heroImage && <Image width={800} height={400} src={heroImage} alt="" />}
 				</div>
 				<div class="prose">
 					<div class="title">
-						<div class="date">
+						<!-- <div class="date">
 							<FormattedDate date={pubDate} />
 							{
 								updatedDate && (
@@ -73,7 +72,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 									</div>
 								)
 							}
-						</div>
+						</div> -->
 						<h1>{title}</h1>
 						<hr />
 					</div>
