--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,12 +21,23 @@
       0 8px 24px rgba(var(--gray), 33%), 0 16px 32px rgba(var(--gray), 33%);
   }
 
+  html,
+  body {
+    height: 100%;
+  }
+
   body {
     font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI",
       "Roboto", "Oxygen", "Ubuntu", "Cantarell", sans-serif;
     font-size: 20px;
     line-height: 1.7;
     color: rgb(var(--gray-dark));
+    display: flex;
+    flex-direction: column;
+  }
+
+  footer {
+    margin-top: auto;
   }
 
   h1 {
