More visual polishing

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,6 +2,14 @@
 const today = new Date();
 ---
 
-<footer class="px-4 pt-12 pb-16 bg-gray-100 text-gray-400 text-center">
-	&copy; {today.getFullYear()} Freelance Guide Portugal. All rights reserved.
+<footer
+  class="px-4 py-8 bg-white text-gray-400 text-center w-[740px] max-w-full mx-auto text-sm flex flex-row justify-between items-center"
+>
+  <div>
+    &copy; {today.getFullYear()} Freelance Guide Portugal. All rights reserved.
+  </div>
+  <div class="text-left">
+    <div>Terms & Conditions</div>
+    <div>Privacy Policy</div>
+  </div>
 </footer>
