--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -1,7 +1,9 @@
 ---
 import type { HTMLAttributes } from 'astro/types';
 
-type Props = HTMLAttributes<'a'>;
+interface Props extends HTMLAttributes<'a'> {
+  href: string;
+}
 
 const { href, class: className, ...props } = Astro.props;
 const pathname = Astro.url.pathname.replace(import.meta.env.BASE_URL, '');
@@ -17,8 +19,8 @@ const isActive = href === pathname || href === '/' + (subpath?.[0] || '');
 		display: inline-block;
 		text-decoration: none;
 		font-size: 1rem;
-		font-family: 'Fira Sans', sans-serif;
-		font-weight: 400;
+		font-family: 'Readex Pro', sans-serif;
+		font-weight: 500;
 	}
 	a.active {
 		text-decoration: underline;
