--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,7 +4,7 @@
   License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
  */
 
-@import url("https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;600&family=Inter:wght@400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Readex+Pro:wght@400;500;600;700&display=swap");
 
 @import "tailwindcss";
 
@@ -17,8 +17,9 @@
     --gray-light: 229, 233, 240;
     --gray-dark: 34, 41, 57;
     --gray-gradient: rgba(var(--gray-light), 50%), #fff;
-    --box-shadow: 0 2px 6px rgba(var(--gray), 25%),
-      0 8px 24px rgba(var(--gray), 33%), 0 16px 32px rgba(var(--gray), 33%);
+    --box-shadow:
+      0 2px 6px rgba(var(--gray), 25%), 0 8px 24px rgba(var(--gray), 33%),
+      0 16px 32px rgba(var(--gray), 33%);
   }
 
   html,
@@ -27,9 +28,17 @@
   }
 
   body {
-    font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI",
-      "Roboto", "Oxygen", "Ubuntu", "Cantarell", sans-serif;
-    font-size: 20px;
+    font-family:
+      "Inter",
+      -apple-system,
+      BlinkMacSystemFont,
+      "Segoe UI",
+      "Roboto",
+      "Oxygen",
+      "Ubuntu",
+      "Cantarell",
+      sans-serif;
+    font-size: 18px;
     line-height: 1.7;
     color: rgb(var(--gray-dark));
     display: flex;
@@ -46,36 +55,37 @@
   h4,
   h5,
   h6 {
-    font-family: "Fira Sans", sans-serif;
-    font-weight: 600;
+    font-family: "Readex Pro", sans-serif;
+    font-weight: bolder;
   }
 
   h1 {
-    font-size: 3.052em;
+    font-size: 3em;
     margin: 0 0 0.5rem 0;
     color: rgb(var(--black));
     line-height: 1.2;
+    font-weight: 600;
   }
   h2 {
-    font-size: 2.441em;
+    font-size: 2em;
     margin: 0 0 0.5rem 0;
     color: rgb(var(--black));
     line-height: 1.2;
   }
   h3 {
-    font-size: 1.953em;
+    font-size: 1.6em;
     margin: 0 0 0.5rem 0;
     color: rgb(var(--black));
     line-height: 1.2;
   }
   h4 {
-    font-size: 1.563em;
+    font-size: 1.28em;
     margin: 0 0 0.5rem 0;
     color: rgb(var(--black));
     line-height: 1.2;
   }
   h5 {
-    font-size: 1.25em;
+    font-size: 1.024em;
     margin: 0 0 0.5rem 0;
     color: rgb(var(--black));
     line-height: 1.2;
@@ -105,12 +115,12 @@
   }
 
   p {
-    margin-bottom: 1em;
+    margin-bottom: 0.75em;
   }
 
   ul,
   ol {
-    margin: 1em 0;
+    margin: 0.75em 0;
     padding-left: 2em;
   }
   ul {
@@ -120,7 +130,7 @@
     list-style-type: decimal;
   }
   li {
-    margin-bottom: 0.5em;
+    margin-bottom: 0.25em;
   }
 
   code {
@@ -147,7 +157,7 @@
     border-top: 1px solid rgb(var(--gray-light));
   }
 
-  @media (max-width: 720px) {
+  @media (max-width: 740px) {
     body {
       font-size: 18px;
     }
@@ -176,13 +186,11 @@ a.text-teal-700:hover svg {
 }
 
 main {
-  width: 720px;
-  max-width: calc(100% - 2em);
+  width: 100%;
   margin: auto;
-  padding: 3em 1em;
 }
 
-@media (max-width: 720px) {
+@media (max-width: 740px) {
   main {
     padding: 1em;
   }
