--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,13 +4,11 @@ import Layout from "../layouts/BlogPost.astro";
 ---
 
 <Layout
-  title=""
+  title="Why I Built This Site"
   description="Why I made this site and who it's for"
   pubDate={new Date("November 17 2025")}
   heroImage={AboutHeroImage}
 >
-  <h2>Why I Built This Site</h2>
-
   <p>
     If you've ever spent hours trying to navigate Portal das Finanças, wondering
     if you're filing the right forms or second-guessing whether you really need
