--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,8 +3,9 @@ import BaseHead from '../components/BaseHead.astro';
 import Footer from '../components/Footer.astro';
 import Header from '../components/Header.astro';
 import { SITE_DESCRIPTION, SITE_TITLE } from '../consts';
+import { getBaseUrl } from '../utils';
 
-const base = import.meta.env.BASE_URL;
+const base = getBaseUrl();
 ---
 
 <!doctype html>
